# claude-code-multi-model

./: .gitignore  AGENTS.md  README.md
.claude/skills/summarize/: SKILL.md
.claude/skills/swe/: SKILL.md
bedrock/: README.md  pyproject.toml
bedrock/benchmark/: humaneval_rescore.py  humaneval_runner.py
bedrock/benchmark/results/humaneval_full_164/: results_rescored.csv  summary.json
bedrock/benchmark/results/humaneval_sonnet46/: results_rescored.csv  summary.json
bedrock/config/: litellm-config.yaml
bedrock/scripts/: claude-model.sh  setup-proxy.sh
benchmarks/scripts/: generate-cost-quality-chart.py  generate-report.py  replay-benchmark.py  run-swe-benchmark.sh
benchmarks/swe-benchmark-data/: README.md
benchmarks/swe-benchmark-data/mcp-gateway-registry/: JUDGE_RESULTS.md
benchmarks/swe-benchmark-data/mcp-gateway-registry/migrate-ecs-env-vars-to-secrets-manager/claude-opus-4-8/: github-issue.md  judge-gpt.json  lld.md  review.md  testing.md
benchmarks/swe-benchmark-data/mcp-gateway-registry/migrate-ecs-env-vars-to-secrets-manager/glm-5.2/: judge-gpt.json
benchmarks/swe-benchmark-data/mcp-gateway-registry/migrate-ecs-env-vars-to-secrets-manager/kimi-k2-5/: eval.json  github-issue.md  judge-gpt.json  lld.md  review.md  testing.md
self-hosted/: README.md
self-hosted/scripts/: ec2-setup.sh
self-hosted/vllm/: README.md
self-hosted/vllm/models/: glm-5.2.md  qwen3-32b.md  qwen3-coder-30b.md  qwen3-coder-next.md  qwen3.6-35b-a3b.md
self-hosted/vllm/scripts/: claude-local.sh  vllm-serve.sh
(+164 files in other folders)
