[project]
name = "nyc-data-analytics"
version = "0.1.0"
description = "Simple NYC dataset analytics using Polars"
requires-python = ">=3.11"
dependencies = [
    "polars>=0.20.0",
    "pyarrow>=14.0.0",  # For Parquet/CSV I/O
    "requests>=2.31.0", # For downloading datasets
    "typer>=0.9.0",     # For CLI
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4.0",      # Linting/formatting
    "mypy>=1.9.0",      # Type checking
    "pytest>=7.4.0",    # Testing
]

[build-system]
requires = ["uv>=0.1.0"]
build-backend = "uv.internals.build_backend"
