[project]
name = "claude-code-multi-model-bedrock"
version = "0.1.0"
description = "LiteLLM proxy + HumanEval benchmark for running Claude Code against any Amazon Bedrock model"
requires-python = ">=3.10"
dependencies = [
    "litellm[proxy]>=1.83.0",
    "aws-bedrock-token-generator>=1.0.0",
    "datasets>=2.20.0",
    "cryptography>=48.0.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4.0",
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["benchmark"]
